--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .gradle/
 .idea/
 .kotlin/
+build/
 **/.cache
 app/build/
 app/release/
@@ -8,5 +9,5 @@ local.properties
 *.iml
 **/.cxx
 /app/src/main/cpp/
-!/app/src/main/jniLibs
+!/app/src/main/jniLib
 .DS_Store
